--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="index.js"></script>
   <script src="objects.js"></script>
+  <script src="arrays.js"></script>
     <title>Document</title>
 </head>
 <body>
